Fixed code according to the mentor recommendations